edit HTML and CSS

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div>
                 <h4>Telephone:</h4><p>(905)-929-9493</p>
                 <br/>
-                <h4>E-Mail:</h4><p>janet-tem@hotmail.com</p>
+                <h4>E-Mail:</h4><p><a href="mailto:janet-tem@hotmail.com">janet-tem@hotmail.com</a></p>
                 <br/>
                 <h4>LinkedIn:</h4><p><a href="https://www.linkedin.com/in/janet-tem-5171b0153">www.linkedin.com/janet-tem</a></p>
 
